--- a/css/landing.css
+++ b/css/landing.css
@@ -85,6 +85,9 @@
         url('../fonts/Gilroy-ExtraBold.svg#Gilroy-ExtraBold') format('svg');
         font-weight: 800; font-style: normal; 
 } 
+html{
+	scroll-behavior: smooth;
+}
 a {
     color: #151515;
     text-decoration: none;
@@ -166,6 +169,10 @@ body {
 	margin: 0;
 	padding: 0;
 }
+.bg-gray-1 {
+    background-color: #eeeeee;
+    padding: 100px 0;
+}
 .primary-color {
     color: #ffac2c;
 }
@@ -185,6 +192,27 @@ body {
 .navbar-light .navbar-nav .nav-item .nav-link:hover{
 	background: transparent;
     border-color: #aaa;
+}
+.clearfix{
+	clear: both;
+}
+.card{
+	border-radius: 0;
+	border: none
+}
+.card-header.current{
+	background: #ffac2c;
+	border: none;
+}
+.card-header{
+	background: #151515;
+	border: none;
+}
+.card-header.current h4{
+  color: #151515;
+}
+.card-header h4{
+  color: #fff;
 }
 .banner{
 	background-image: url(../images/slider1.jpg);
@@ -386,8 +414,14 @@ h2.primary-color span{
 .footer_nav li a:hover{
 	color: #ffac2c;
 }
+.contact-field-area{
+	margin-top: 5rem;
+}
 .aws_logo{
 	padding: 0 170px 20px 0;
+}
+.footer_bg h3{
+	margin-bottom: 2rem;
 }
 @keyframes fadeInLeftSmall {
 	0% {
@@ -442,16 +476,58 @@ h2.primary-color span{
 	}
 }
 @media (max-width: 990px){
+	.button-primary, .button-secondary, .button-darker, .button-gray-2, .button-lighter {
+	    padding: 8px 35px;
+	}
+	.contact-field-area{
+		margin: 2rem 0 2rem 0;
+	}
+	.contact-field-area button{
+		margin: auto;
+		display: block;
+	}
+	.footer_bg h3{
+		margin-bottom: 0;
+		font-size: 1.4rem;
+		margin-top: 2rem;
+	}
+	.footer_logo {
+	    margin-bottom: 0px;
+	}
+	.footer_nav li a{
+		font-size: 1rem;
+	}
+	.aws_logo,
+	.payment_logo{
+		margin: auto;
+		padding: 0;
+		max-width: 60%;
+	}
+	.aws_logo{
+		height: 42px;
+	}
 	.bg-gray-img-1,
 	.bg-yellow-img-1,
 	.class_features,
-	.bg_gray,
-	.footer_bg{
-		padding: 50px 0;
+	.footer_bg,
+	.bg-gray-1{
+		padding: 25px 0 25px 0;
+	}
+	.aws_payment{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100px;
+	}
+	.bg_gray{
+		padding: 50px 0 50px 0;
 	}
 	.pl_100{
 		padding-left: 0px;
-		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	.class_features .shadow {
+		text-align: center;
 	}
 	.contact_icon{
 		margin-left: 10px;
@@ -486,10 +562,12 @@ h2.primary-color span{
 		margin: 0;
 	}
 	.banner h2,
-	.banner h4{
+	.banner h4,
+	.card-header h4{
 		font-size: 1rem;
 	}
-	.banner h1{
+	.banner h1,
+	.card-title{
 		font-size: 1.4rem;
 	}
 	.banner_btn a{
